--- a/index.html
+++ b/index.html
@@ -948,7 +948,7 @@ var wc_cart_fragments_params = {"ajax_url":"\/mySite\/wp-admin\/admin-ajax.php",
 			}());
 		</script>
 	<!--<![endif]-->
-			<div id="wpadminbar" class="nojq nojs">
+			<!-- <div id="wpadminbar" class="nojq nojs">
 							<a class="screen-reader-shortcut" href="#wp-toolbar" tabindex="1">Skip to toolbar</a>
 						<div class="quicklinks" id="wp-toolbar" role="navigation" aria-label="Toolbar" tabindex="0">
 				<ul id="wp-admin-bar-root-default" class="ab-top-menu">
@@ -988,7 +988,7 @@ var wc_cart_fragments_params = {"ajax_url":"\/mySite\/wp-admin\/admin-ajax.php",
 		<li id="wp-admin-bar-edit-profile"><a class="ab-item" href="mySite/wp-admin/profile.php">Edit My Profile</a>		</li>
 		<li id="wp-admin-bar-logout"><a class="ab-item" href="mySite/wp-login.php?action=logout&#038;_wpnonce=e08c04fa65">Log Out</a>		</li></ul></div>		</li></ul>			</div>
 						<a class="screen-reader-shortcut" href="mySite/wp-login.php?action=logout&#038;_wpnonce=e08c04fa65">Log Out</a>
-					</div>
+					</div> -->
 
 		</body>
 </html>
