--- a/index.html
+++ b/index.html
@@ -185,21 +185,9 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 <li id="menu-item-73492" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73492 dropdown menu-item-link"><a title="Shop" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Shop<i class="fa fa-angle-down fa-dropdown"></i></a>
 
 </li>
-</ul></div><div class="nav navbar-nav navbar-nav-last"><ul class="menu-smart sm menu-icons"><li class="menu-item-link search-icon style-light dropdown"><a href="#" class="trigger-overlay search-icon" data-area="search" data-container="box-container">
-													<i class="fa fa-search3"></i><span class="desktop-hidden"><span>Search</span></span><i class="fa fa-angle-down fa-dropdown desktop-hidden"></i>
-													</a>
-													<ul role="menu" class="drop-menu desktop-hidden">
-														<li>
-															<form class="search" method="get" action="mySite/">
-																<input type="search" class="search-field no-livesearch" placeholder="Search…" value="" name="s" title="Search for:" />
-															</form>
-														</li>
-													</ul></li><li class="uncode-cart menu-item-link menu-item menu-item-has-children dropdown">
-												<a href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title" title="cart">
-													<span class="cart-icon-container"><i class="fa fa-bag"></i><span class="desktop-hidden">Cart</span><span class="badge" style="display: none;"></span><i class="fa fa-angle-down fa-dropdown desktop-hidden"></i>
-								</span>
-							</a>
-							<ul role="menu" class="drop-menu sm-nowrap cart_list product_list_widget uncode-cart-dropdown"><li><span>Your cart is currently empty.</span></li></ul></li></ul></div></div>
+</ul></div>
+
+</div>
 																		</div>
 																	</div>
 																</div>
