--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
                           </span>
                       </li>
                                                               <li class="filter-cat-33"><span><a href="#" data-filter="grid-cat-33" class="">Web</a></span></li>
-                                                                                    <li class="filter-cat-34"><span><a href="#" data-filter="grid-cat-34" class="">Adv</a></span></li>
+                                                                                    <li class="filter-cat-34"><span><a href="#" data-filter="grid-cat-34" class="">Interaction Design</a></span></li>
                                                                                     <li class="filter-cat-35"><span><a href="#" data-filter="grid-cat-35" class="">Branding</a></span></li>
                                                                                     <li class="filter-cat-36"><span><a href="#" data-filter="grid-cat-36" class="">Design</a></span></li>
-                                                                                    <li class="filter-cat-37"><span><a href="#" data-filter="grid-cat-37" class="">Photo</a></span></li>
+                                                                                    <li class="filter-cat-37"><span><a href="#" data-filter="grid-cat-37" class="">Photography/Videography</a></span></li>
                                                           </ul>
               </div>
           </div>
