--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
                                                 Show all</a>
                           </span>
                       </li>
-                                                              <li class="filter-cat-33"><span><a href="#" data-filter="grid-cat-33" class="">Web</a></span></li>
-                                                                                    <li class="filter-cat-34"><span><a href="#" data-filter="grid-cat-34" class="">Interaction Design</a></span></li>
-                                                                                    <li class="filter-cat-35"><span><a href="#" data-filter="grid-cat-35" class="">Branding</a></span></li>
-                                                                                    <li class="filter-cat-36"><span><a href="#" data-filter="grid-cat-36" class="">Design</a></span></li>
-                                                                                    <li class="filter-cat-37"><span><a href="#" data-filter="grid-cat-37" class="">Photography/Videography</a></span></li>
+                                                              <li class="filter-cat-33"><span><a href="#" data-filter="grid-cat-33" class="">UX/Interaction Design</a></span></li>
+                                                                                    <li class="filter-cat-34"><span><a href="#" data-filter="grid-cat-34" class="">Research</a></span></li>
+                                                                                    <li class="filter-cat-35"><span><a href="#" data-filter="grid-cat-35" class="">System Design</a></span></li>
+                                                                                    <li class="filter-cat-36"><span><a href="#" data-filter="grid-cat-36" class="">Others</a></span></li>
+                                                                                    
                                                           </ul>
               </div>
           </div>
