--- a/index.html
+++ b/index.html
@@ -153,45 +153,14 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 														<div class="menu-container menu-hide style-color-xsdn-bg menu-borders menu-shadows">
 															<div class="row-menu limit-width">
 																<div class="row-menu-inner">
+																	
+
+
+
 																	<div id="logo-container-mobile" class="col-lg-0 logo-container middle">
-																		<div id="main-logo" class="navbar-header style-light">
-																			<a href="mySite" class="navbar-brand" data-minheight="14"><div class="html-code logo-skinnable" data-maxheight="14" style="height: 14px;"><canvas class="logo-canvas" height="14" width="68"></canvas><svg preserveAspectRatio="xMinYMin" version="1.1" id="Layer_1-714047051" x="0px" y="0px"
-	 width="78.104px" height="16.475px" viewBox="23.377 0 78.104 16.475" enable-background="new 23.377 0 78.104 16.475"
-	 xml:space="preserve">
-<g>
-	<path fill="#3B3E40" d="M31.904,4.098h3.104v12.2h-3.104v-1.85c-0.776,1.336-2.049,2.004-3.812,2.004
-		c-1.381,0-2.512-0.459-3.396-1.377c-0.879-0.918-1.319-2.191-1.319-3.82V4.098h3.084v6.717c0,0.955,0.242,1.688,0.729,2.203
-		c0.481,0.516,1.146,0.771,1.979,0.771c0.838,0,1.502-0.256,1.994-0.771c0.489-0.517,0.735-1.248,0.735-2.203L31.904,4.098
-		L31.904,4.098z"/>
-	<path fill="#3B3E40" d="M40.318,4.098v1.828c0.777-1.336,2.041-2.004,3.789-2.004c1.396,0,2.531,0.458,3.414,1.376
-		C48.402,6.216,48.84,7.49,48.84,9.12v7.18h-3.084V9.561c0-0.955-0.241-1.686-0.728-2.19c-0.481-0.506-1.146-0.761-1.979-0.761
-		c-0.838,0-1.502,0.255-1.993,0.761c-0.492,0.507-0.738,1.235-0.738,2.19V16.3h-3.104V4.098H40.318z"/>
-	<path fill="#3B3E40" d="M51.75,14.757c-1.117-1.146-1.676-2.666-1.676-4.562s0.559-3.413,1.676-4.559
-		c1.112-1.146,2.562-1.719,4.338-1.719c1.481,0,2.726,0.358,3.726,1.079c0.996,0.719,1.664,1.739,2.004,3.062h-3.351
-		c-0.396-1.014-1.188-1.52-2.379-1.52c-0.896,0-1.598,0.326-2.104,0.979c-0.506,0.654-0.762,1.547-0.762,2.676
-		c0,1.134,0.256,2.023,0.762,2.679c0.507,0.651,1.207,0.979,2.104,0.979c1.177,0,1.968-0.515,2.379-1.541h3.351
-		c-0.354,1.276-1.032,2.291-2.039,3.039c-1.006,0.75-2.231,1.123-3.688,1.123C54.31,16.475,52.863,15.902,51.75,14.757z"/>
-	<path fill="#3B3E40" d="M63.994,14.734c-1.188-1.157-1.783-2.68-1.783-4.561c0-1.879,0.604-3.392,1.808-4.538
-		c1.203-1.145,2.696-1.718,4.479-1.718c1.785,0,3.278,0.572,4.481,1.718c1.203,1.146,1.807,2.658,1.807,4.538
-		c0,1.881-0.604,3.397-1.815,4.561c-1.212,1.16-2.714,1.74-4.505,1.74C66.673,16.475,65.183,15.895,63.994,14.734z M68.466,13.854
-		c0.865,0,1.609-0.316,2.234-0.957c0.623-0.64,0.938-1.541,0.938-2.709s-0.312-2.065-0.927-2.696
-		c-0.616-0.632-1.36-0.947-2.235-0.947c-0.873,0-1.608,0.313-2.213,0.947c-0.604,0.631-0.902,1.532-0.902,2.708
-		s0.302,2.076,0.902,2.711C66.865,13.539,67.599,13.854,68.466,13.854z"/>
-	<path fill="#3B3E40" d="M76.935,14.703c-1.097-1.185-1.644-2.69-1.644-4.527c0-1.834,0.543-3.336,1.631-4.503
-		c1.086-1.167,2.468-1.751,4.144-1.751c1.672,0,2.949,0.689,3.83,2.07V0h3.084v16.298h-3.084v-2.047
-		c-0.924,1.479-2.209,2.224-3.854,2.224C79.397,16.475,78.028,15.884,76.935,14.703z M83.927,12.83
-		c0.646-0.64,0.97-1.519,0.97-2.634c0-1.114-0.321-1.992-0.97-2.633c-0.646-0.638-1.401-0.957-2.27-0.957
-		c-0.869,0-1.619,0.314-2.259,0.947c-0.642,0.631-0.959,1.504-0.959,2.619c0,1.117,0.322,1.998,0.972,2.645
-		c0.646,0.646,1.396,0.972,2.258,0.972C82.528,13.789,83.278,13.468,83.927,12.83z"/>
-	<path fill="#3B3E40" d="M95.335,16.475c-1.774,0-3.226-0.576-4.34-1.729c-1.115-1.152-1.675-2.677-1.675-4.57
-		c0-1.893,0.562-3.409,1.688-4.548c1.121-1.137,2.576-1.706,4.357-1.706c1.784,0,3.25,0.556,4.396,1.663
-		c1.146,1.108,1.719,2.588,1.719,4.438c0,0.428-0.028,0.823-0.09,1.188h-8.896c0.073,0.793,0.366,1.433,0.881,1.916
-		c0.517,0.483,1.168,0.728,1.961,0.728c1.07,0,1.865-0.438,2.379-1.318h3.349c-0.353,1.158-1.035,2.105-2.047,2.842
-		C98.001,16.107,96.774,16.475,95.335,16.475z M97.372,7.268c-0.552-0.482-1.215-0.726-1.992-0.726c-0.778,0-1.43,0.242-1.948,0.726
-		c-0.521,0.485-0.834,1.131-0.938,1.938h5.771C98.22,8.398,97.923,7.753,97.372,7.268z"/>
-</g>
-</svg></div></a>
-																		</div>
+																		<h5 style="color: #303133">akhilpatel</h5>
+
+
 																		<div class="mmb-container"><div class="mobile-menu-button mobile-menu-button-light lines-button x2"><span class="lines"></span></div></div>
 																	</div>
 																	<div class="col-lg-12 main-menu-container middle">
