--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 
 
 																	<div id="logo-container-mobile" class="col-lg-0 logo-container middle">
-																		<h5 style="color: #303133">akhilpatel</h5>
+																		<h5 style="color: #303133;" style="display: inline-block; white-space: nowrap;">akhilpatel</h5>
 
 
 																		<div class="mmb-container"><div class="mobile-menu-button mobile-menu-button-light lines-button x2"><span class="lines"></span></div></div>
