--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 
 
 																	<div id="logo-container-mobile" class="col-lg-0 logo-container middle">
-																		<h5 style="white-space: nowrap; color: #303133;">akhil patel</h5> 
+																		<h5 style="white-space: nowrap; color: #303133;"><a href="https://akhilpa.tel">akhil patel</a>  </h5> 
 
 
 																		<div class="mmb-container"><div class="mobile-menu-button mobile-menu-button-light lines-button x2"><span class="lines"></span></div></div>
