--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
 <link rel="pingback" href="mySite/xmlrpc.php">
-<title>Portfolio Classic &#8211; Akhil Patel</title>
+<title>Akhil Patel Portfolio</title>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="Akhil Patel &raquo; Feed" href="mySite/feed/" />
@@ -172,13 +172,13 @@ var SiteParameters = {"days":"days","hours":"hours","minutes":"minutes","seconds
 <li id="menu-item-73493" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73493 dropdown menu-item-link"><a title="Pages" href="#projects" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Projects<i class="fa fa-angle-down fa-dropdown"></i></a>
 
 </li>
-<li id="menu-item-73494" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73494 dropdown menu-item-link"><a title="Features" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">About<i class="fa fa-angle-down fa-dropdown"></i></a>
+<li id="menu-item-73494" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73494 dropdown menu-item-link"><a title="Features" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Resumé<i class="fa fa-angle-down fa-dropdown"></i></a>
 
 </li>
-<li id="menu-item-73495" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73495 dropdown menu-item-link"><a title="Works" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Resumé<i class="fa fa-angle-down fa-dropdown"></i></a>
+<li id="menu-item-73495" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73495 dropdown menu-item-link"><a title="Works" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Blog<i class="fa fa-angle-down fa-dropdown"></i></a>
 
 </li>
-<li id="menu-item-73496" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73496 dropdown menu-item-link"><a title="Blog" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">Blog<i class="fa fa-angle-down fa-dropdown"></i></a>
+<li id="menu-item-73496" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-73496 dropdown menu-item-link"><a title="Blog" href="#" data-toggle="dropdown" class="dropdown-toggle" data-type="title">About Me<i class="fa fa-angle-down fa-dropdown"></i></a>
 
 </li>
 
